--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body{
 nav{
   background-color: black;
   width: 100%vh;
+  height: 40px;
   margin: 0;
 }
 
@@ -35,7 +36,7 @@ nav{
 
 .link{
   display: inline;
-  padding: 16px 12px;
+  padding: 16px 12px; 
 }
 
 a{
