--- a/style.css
+++ b/style.css
@@ -1,3 +1,48 @@
+.nav-bar{
+  /* position: fixed;
+  top: 0;
+  width: 100%; */
+  overflow: hidden;
+  background-color: #333;
+}
+
+.nav-list{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  
+}
+
+.name{
+  color: white;
+  text-decoration: none;
+  float: left;
+  padding: 14px 16px;
+  margin: 0;
+}
+
+.link{
+  float: right;
+}
+
+.nav-item a{
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  border-right: 1px solid white;
+}
+
+#borderless{
+  border-right: none;
+}
+
+.nav-item a:hover{
+  background-color: blueviolet;
+  transition: .4s;  
+}
+
 .mediv, .meimg{
   display: flex;
   flex-direction: column;
@@ -21,38 +66,6 @@
 
 body{
   margin: 0;
-}
-
-nav{
-  color: white;
-  background-color: black;
-  width: 100%vh;
-  height: 50px;
-}
-
-.navbar{
-  display: flex;
-  justify-content: space-around;
-}
-
-.nav-links{
-  display: flex;
-  margin: 0;
-  padding-left: 0;
-}
-
-.link{
-  list-style-type: none;
-  padding: 16px; 
-}
-
-a{
-  color: white;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: rgb(237, 17, 17);
 }
 
 .prof{
