--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .nav-bar{
-  /* position: fixed;
+  position: fixed;
   top: 0;
-  width: 100%; */
+  width: 100%;
   overflow: hidden;
   background-color: #333;
 }
@@ -41,6 +41,10 @@
 .nav-item a:hover{
   background-color: blueviolet;
   transition: .4s;  
+}
+
+.mediv{
+  padding-top: 50px;
 }
 
 .mediv, .meimg{
