--- a/style.css
+++ b/style.css
@@ -84,7 +84,8 @@ body{
 }
 
 .card{
-  background-color: grey;
+  background-color: #333;
+  color: white;
   width: 270px;
   margin: 10px;
   border-radius: 15px;
@@ -124,10 +125,17 @@ body{
   display: block;
   text-align: center;
   margin: 20px 50px;
+  text-decoration: none;
+}
+
+.card a:hover{
+  background-color: white;
+  color: black;
+  
 }
 
 .card:hover{
-  background-color: aqua;
+  background-color: grey;
   transition: .8s;
   transform: scale(1.05);
 }
