--- a/style.css
+++ b/style.css
@@ -73,8 +73,19 @@ body{
   margin: 0;
 }
 
+h1 {
+  padding-left: 50px;
+  text-decoration: underline;
+}
+
+h3 {
+  margin: 0;
+  padding-top: 15px;
+}
+
 .prof{
   list-style-type: none;
+  text-align: center;
 }
 
 .container{
