add media checks for px legnth of screens

--- a/style.css
+++ b/style.css
@@ -74,8 +74,31 @@ body{
 }
 
 h1 {
-  padding-left: 50px;
   text-decoration: underline;
+}
+
+@media (max-width: 1200px){
+  h1 {
+    padding-left: 50px;
+  }
+}
+
+@media (min-width: 1200px){
+  h1 {
+    padding-left: 200px;
+  }
+}
+
+@media (min-width: 1600px){
+  h1 {
+    padding-left: 400px;
+  }
+}
+
+@media (min-width: 2000px){
+  h1 {
+    padding-left: 600px;
+  }
 }
 
 h3 {
