--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ h3 {
 }
 
 .card{
-  background-color: #333;
+  background-color: grey;
   color: white;
   width: 270px;
   margin: 10px;
@@ -163,13 +163,13 @@ h3 {
 }
 
 .card a:hover{
-  background-color: white;
-  color: black;
+  background-color: blueviolet;
+  color: white;
   
 }
 
 .card:hover{
-  background-color: grey;
+  background-color: #333;
   transition: .8s;
   transform: scale(1.05);
 }
